# amazon-price-tracker

./: .env.example  README.md  Untitled.html  Untitled.ipynb  Untitled2.html  amazon4.py  amazon5.py  dashboard.py  generate_dummy.py  main.py  makefile  prices.csv  prices_dummy.csv  pyproject.toml  requirements.txt  scraper.py  visualize.py
charts/: B0FRM8M38X.html  B0G3WHQ8MX.html  B0G9PQ4PDN.html
html_for_test/: Amazon.com _ KORURACLUB gradient Wigs cosplay Wig pink and lolita wigs anime wig halloween Wigs for women (No accessories included) (Crimson Silver Glow) _ Beauty & Personal Care.html
