[project]
name = "amazon-price-tracker-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.1",
    "camoufox>=0.4.11",
    "curl-cffi>=0.15.0",
    "dotenv>=0.9.9",
    "isort>=8.0.1",
    "jupyter>=1.1.1",
    "plotly>=6.6.0",
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
